FIX: Removed Redundant Folder

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 JWT_SECRET="l3i9cyg652o9h6t8uisd54j276jhvc78qq"
 MONGO_URI="mongodb+srv://jengensmitty:redfox56@cluster0.rjky4bn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT=3000
