--- a/client/vocabulary_mogul/package.json
+++ b/client/vocabulary_mogul/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "prebuild": "node inject-env.js",
+    "prebuild": "node inject-env.ts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
